Fixing user creation/update contracts
